--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,5 @@
 PROXYPORT=4454
 VUE_APP_PROXYPORT=4454
-SERVERDOMAIN=http://localhost
+VUE_APP_SERVERDOMAIN=http://localhost
 NODE_URL=http://localhost:26659
 VUE_APP_NODE_URL=http://localhost:26659
